# F550_Project_Exercise1

./: .gitignore  README.md  data_preprocess.py  environment.yml  main.py  pyproject.toml  requirements.txt
outputs/: firm_quarter_sentiment.csv  outlook_sentences.csv  sector_sentiment.csv  selected_companies_summary_2024.csv  sentiment_results.csv  tech_20_companies_transcripts_2024.csv  transcript_sentiment_details.csv
